# db_agg

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  config.h.in  configure  configure.ac  index.html  params.json
bindings/python/: CMakeLists.txt  db_agg.i
cmake/: FindCurses.cmake  FindLibZip.cmake  FindLog4cplus.cmake  FindSqlite3.cmake
debian/: changelog  control  copyright  db-agg-memcached.install  db-agg-postgresql.install  db-agg-soap.install  db-agg-sqlite3.install  db-agg.install  libdb-agg-dev.install  postinst  rules
etc/: database-registry.dtd  log4cplus.properties  url-registry.xsd  xml-query.xsd
extensions/memcached/: CMakeLists.txt  Memcached.cpp  Memcached.h  MemcachedQuery.cpp  MemcachedQuery.h  module.cpp
extensions/postgresql/: AsyncQueryExecutor.cpp  AsyncQueryExecutor.h  CMakeLists.txt  PGConnection.cpp  PGQueryExecution.cpp  PGQueryExecution.h  PGResult.cpp  PostgresqlExecution.cpp  PostgresqlExecution.h  module.cpp
extensions/soap/: CMakeLists.txt  CTestTestfile.cmake  SoapExecution.cpp  SoapExecution.h  cmake_install.cmake  module.cpp
extensions/sqlite3/: CMakeLists.txt  Sqlite3Execution.cpp  Sqlite3Execution.h  VirtualTableData.cpp  VirtualTableData.h  module.cpp
src/: db_agg.h  installation.h.in  installation_cmake.h.in
src/lib/: CMakeLists.txt  db_agg.h
src/lib/api/: DbAggProcessingApi.cpp  DbAggProcessingApi.h
src/lib/cache/: CacheRegistry.cpp  CacheRegistry.h
src/lib/core/: Application.cpp  Application.h  AsyncQueryExecutor.cpp  AsyncQueryExecutor.h  Configuration.cpp  Configuration.h  Connection.cpp  Connection.h  DatabaseRegistry.cpp  DatabaseRegistry.h  Dependency.cpp  Dependency.h  ExecutionGraph.cpp  ExecutionGraph.h  ExecutionHandler.h  Locator.cpp  Locator.h  ManyToMany.cpp  ManyToMany.h  ManyToOne.cpp  ManyToOne.h  OneToMany.cpp  OneToMany.h  PGQueryExecution.cpp  PGQueryExecution.h  Query.cpp  Query.h  QueryExecution.cpp  QueryExecution.h  QueryParser.cpp  QueryParser.h  QueryProcessor.cpp  QueryProcessor.h  RegExpQueryParser.cpp  RegExpQueryParser.h  ResourceQueryExecution.cpp  ResourceQueryExecution.h  ShardingStrategy.h  Transition.cpp  Transition.h  (+6 more)
src/lib/event/: AsyncEvent.cpp  AsyncEvent.h  Event.cpp  Event.h
src/lib/excel/: ExcelToTextFormat.cpp  ExcelToTextFormat.h
src/lib/extension/: Builtin.cpp  Builtin.h  Extension.cpp  Extension.h  ExtensionLoader.cpp  ExtensionLoader.h
src/lib/graph/: Channel.cpp  Channel.h  DataReceiver.h  DataSender.h  ExecutionGraph.cpp  ExecutionGraph.h  ExecutionGraph2.cpp  ExecutionGraph2.h  Graph.h  Port.cpp  Port.h
src/lib/injection/: DefaultDependencyInjector.cpp  DefaultDependencyInjector.h  DependencyInjector.h  ExecutionStep.cpp  ExecutionStep.h  NoResultInjector.cpp  NoResultInjector.h  WorkerInjection.cpp  WorkerInjection.h
src/lib/postgres/: PGConnection.cpp  PGConnection.h  PGResult.cpp  PGResult.h
src/lib/sharding/: ExplicitShardingStrategy.cpp  ExplicitShardingStrategy.h  MD5ShardingStrategy.cpp  MD5ShardingStrategy.h  ModuloShardingStrategy.cpp  ModuloShardingStrategy.h  ShardingStrategy.cpp  ShardingStrategy.h  ShardingStrategyConfiguration.cpp  ShardingStrategyConfiguration.h
src/lib/table/: ColRef.cpp  ColRef.h  CsvTableData.cpp  CsvTableData.h  Data.cpp  Data.h  DataChunk.cpp  DataChunk.h  ExtendedTableData.cpp  ExtendedTableData.h  JoinedTableData.cpp  JoinedTableData.h  SplittedTableData.cpp  SplittedTableData.h  TableData.cpp  TableData.h  TableDataFactory.cpp  TableDataFactory.h  TableDataRange.cpp  TableDataRange.h  TableIndex.cpp  TableIndex.h  TableReader.h
src/lib/template/: ASTNode.cpp  ASTNode.h  JsonVar.cpp  JsonVar.h  Parser.h  Parser.ih  Parserbase.h  Scanner.h  Scanner.ih  Scannerbase.h  TableDataVar.cpp  TableDataVar.h  Template.cpp  Template.h  Template2.cpp  Template2.h  Var.cpp  Var.h  any.h  lex.cpp  parse.cpp  template.l  template.y
src/lib/type/: TypeRegistry.cpp  TypeRegistry.h  TypedValue.h  oids.h
src/lib/utils/: Diff.cpp  Diff.h  DomToTable.cpp  DomToTable.h  File.cpp  File.h  PasswordManager.cpp  PasswordManager.h  RegExp.cpp  RegExp.h  SignalHandler.cpp  SignalHandler.h  TableToDom.cpp  TableToDom.h  Template.cpp  Template.h  Time.cpp  Time.h  logging.h  md5.cpp  md5.h  string.cpp  string.h  utility.cpp  utility.h  xml.cpp  xml.h
src/test/: ApplicationTest.cpp
tests/data/: bootstrap_test_dbs.sh  database-registry.xml  local_sharded1_db.sqlite3  local_sharded2_db.sqlite3  local_sharded3_db.sqlite3  local_sharded4_db.sqlite3  local_unsharded_db.sqlite3  url-registry.xml
tests/queries/: locator.xml  many_to_many.xml  many_to_one.xml  one_to_many.xml  one_to_one.xml
tests/queries/locator/local/: all_shards_1.csv  all_shards_2.csv  all_shards_3.csv  all_shards_4.csv  executionPlan.dot  join_one_shard.csv  select_one_shard.csv
tests/queries/many_to_many/local/: executionPlan.dot  source_4.csv  target_1.csv  target_3.csv
tests/queries/many_to_one/local/: executionPlan.dot  source_2.csv  target.csv
tests/queries/one_to_many/local/: executionPlan.dot  target_1.csv  target_2.csv  target_3.csv  target_4.csv
tests/queries/one_to_one/local/: executionPlan.dot  target.csv
tools/: gen-cli.py
tools/resources/: bean.cpp.jinja  bean.h.jinja  cli.asciidoc.jinja  gtk.builder.jinja  parser.cpp.jinja  parser.h.jinja
